--- a/templates/home.html
+++ b/templates/home.html
@@ -14,12 +14,12 @@
     <div id="Header">🅡🅔🅐🅛-🅣🅘🅜🅔-🅕🅞🅡🅤🅜</div>
 
     <nav class="nav">
-        <a id ="homePage" href = "/" class="nav__link">HomePage</a>
-        <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">Register</a>
-        <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">Login</a>
-        <a id ="post" onclick="openPosts()" class="nav__link">Posts</a>
-        <a id="profile" class="nav__link" style="display:none">Profile</a>    
-        <a id="logout" class="nav__link" style="display:none">LogOut</a>    
+        <a id ="homePage" href = "/" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
+        <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝕖𝕘𝕚𝕤𝕥𝕖𝕣</a>
+        <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕠𝕘𝕀𝕟</a>
+        <a id ="post" onclick="openPosts()" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
+        <a id="profile" class="nav__link" style="display:none">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>    
+        <a id="logout" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>    
 
     </nav>
 
@@ -27,17 +27,17 @@
 
     <nav class="chat">
         <a id="welcomemsg">𝕎𝔼𝕃ℂ𝕆𝕄𝔼 𝕋𝕆 ℝ𝔼𝔸𝕃 𝕋𝕀𝕄𝔼 𝔽𝕆ℝ𝕌𝕄 𝕃𝕆𝔾𝕀ℕ 𝕆ℝ ℝ𝔼𝔾𝕀𝕊𝕋𝔼ℝ!</a>
-        <a id ="Messenger" style="display:none">🅼🅴🆂🆂🅴🅽🅶🅴🆁</a>
+        <a id ="Messenger" style="display:none">𝕄𝔼𝕊𝕊𝔼ℕ𝔾𝔼ℝ</a>
         <div id="log"></div>
         <form class="modal-content animate" action="/chat" id="formChat">
             <input type="submit" id="button" value="Send" />
             <input type="text" id="msg" size="64" autofocus />
         </form>
 
-        <a id="Users" class="loggedinUsers" style="display:none"><strong>🆄🆂🅴🆁🆂</strong></a>
+        <a id="Users" class="loggedinUsers" style="display:none"><strong>𝕌𝕊𝔼ℝ𝕊</strong></a>
         <div id="usersLog"></div>
-        <a id="Online" class="OnlineUsers" style="display:none"><strong>🅾🅽🅻🅸🅽🅴</strong></a>
-        <a id="Offline" class="OfflineUsers" style="display:none"><strong>🅾🅵🅵🅻🅸🅽🅴</strong></a>
+        <a id="Online" class="OnlineUsers" style="display:none"><strong>𝕆ℕ𝕃𝕀ℕ𝔼</strong></a>
+        <a id="Offline" class="OfflineUsers" style="display:none"><strong>𝕆𝔽𝔽𝕃𝕀ℕ𝔼</strong></a>
 
     </nav>
 
@@ -75,8 +75,8 @@
        <div class="container" >
         <h1>🅻🅾🅶🅸🅽</h1>
 
-        <label for="userEmail" for="userName"><b>Name Or Email</b></label>
-        <input type="text" id="LEmail" placeholder="Enter Username" name="UserName" required>
+        <label for="userName"><b>Userame Or Email</b></label>
+        <input type="text" id="LUserName" placeholder="Enter Username" name="UserName" required>
         
         
         <label for="psw"><b>Password</b></label>
