--- a/templates/home.html
+++ b/templates/home.html
@@ -225,7 +225,7 @@
 <script src="/js/register.js"></script>
 <script src="/js/login.js"></script>
 <script src="/js/buttons.js"></script>
-<script src="/js/chat.js"></script>
+<script src="/js/messenger.js"></script>
 
 
 </html>
