--- a/templates/home.html
+++ b/templates/home.html
@@ -303,6 +303,15 @@
             </h4>
         </div>
 
+        <div id="logRejected" style="display:none">
+            <h4>
+                Invalid UserName or Password!
+            </h4>
+            <h4>
+               Check UserName or Password!
+            </h4><img src="/css/img/sad.gif" alt="" srcset="" height="25%" width="25%">
+        </div>
+
 <!-- 
     <div id="profileMod" class="modal">
         <form class="modal-content animate" action="/login">
