--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,7 @@
               class="message-input"
               placeholder="Type message..."
             ></input>
-            <button class="message-submit" id="chat-private-btn">
+            <button class="message-submit" id="msg-send-btn">
               Send
             </button>
           </div>
