--- a/templates/home.html
+++ b/templates/home.html
@@ -7,23 +7,41 @@
     <title> RT-Forum </title>
     <link rel="shortcut icon" href="/css/img/chat.png">
     <link rel ="stylesheet" href="/css/home.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+  />
+  <script
+  src="https://kit.fontawesome.com/3c167d6bd6.js"
+  crossorigin="anonymous"
+></script>
 </head>
 
 <body>
+        <!-- 
+===========================================================================================================
+                               LEFT MAIN NAV LINK                                                    
+===========================================================================================================
+-->
 
     <div id="Header">🅡🅔🅐🅛-🅣🅘🅜🅔-🅕🅞🅡🅤🅜</div>
 
     <nav class="nav">
-        <a id ="homePage" href = "/" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
+        <a id="current-user"></a>
+        <a id ="homePage" href = "/" onclick="e.preventDefault();" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
         <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝕖𝕘𝕚𝕤𝕥𝕖𝕣</a>
         <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕠𝕘𝕀𝕟</a>
-        <a id ="post" onclick="openPosts()" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
-        <a id="profile" class="nav__link" style="display:none">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>    
-        <a id="logout" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>    
+        <a id ="post" onclick="openPosts() ;" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
+        <!-- <a id="profile" class="nav__link" style="display:none">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>     -->
+        <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>    
 
     </nav>
 
-    
+       <!-- 
+===========================================================================================================
+                               RIGHT CHAT NAV LINK                                                     
+===========================================================================================================
+-->
 
     <nav class="chat">
         <a id="welcomemsg">𝕎𝔼𝕃ℂ𝕆𝕄𝔼 𝕋𝕆 ℝ𝔼𝔸𝕃 𝕋𝕀𝕄𝔼 𝔽𝕆ℝ𝕌𝕄 𝕃𝕆𝔾𝕀ℕ 𝕆ℝ ℝ𝔼𝔾𝕀𝕊𝕋𝔼ℝ!</a>
@@ -34,12 +52,47 @@
             <input type="text" id="msg" size="64" autofocus />
         </form>
 
-        <a id="Users" class="loggedinUsers" style="display:none"><strong>𝕌𝕊𝔼ℝ𝕊</strong></a>
-        <div id="usersLog"></div>
+        <a id="usersLog" class="loggedInUsers" style="display:none"><strong>𝕌𝕊𝔼ℝ𝕊</strong></a>
         <a id="Online" class="OnlineUsers" style="display:none"><strong>𝕆ℕ𝕃𝕀ℕ𝔼</strong></a>
         <a id="Offline" class="OfflineUsers" style="display:none"><strong>𝕆𝔽𝔽𝕃𝕀ℕ𝔼</strong></a>
 
+        <!--chat modal ui-->
+    <div class="chat-private" id="chat-private">
+        <div class="chat-modal" class="modal">
+          <!-- <div class="modal-content animate" action="/chat" id="formChat"> -->
+            <div class="chat-title-box">
+              <button type="close-msg" class="button" value="closeBtn" onclick="ChatReturn()">
+                  Back
+              </button>
+           </div>
+            <div class="chat-title">
+              <h1 id="recipient"></h1>
+            </div>
+            <div class="messages">
+              <div class="messages-content"></div>
+            </div>
+            <div class="message-box" id ="message-box">
+              <input
+                type="text"
+                id="msg"
+                class="message-input"
+                placeholder="Type message..."
+              ></input>
+              <button class="message-submit" id="chat-private-btn">
+                Send
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </nav>
+
+    <!-- 
+===========================================================================================================
+                                    CREATE POST BLOCK                                                       
+===========================================================================================================
+-->
 
     <div id="postBlock" class="posts" >
         <label for="PostTitle">Post Title:</label>
@@ -52,84 +105,141 @@
     
     </div>
 
-    <div id="postedArticles" class="posts" style="display:none">
-        <label for="TitleCreated">Post Title:</label>
-        <textarea name="postTitle" type="text" rows="1" cols="60" id="PostTitle" name="Title" placeholder="Enter Title..."></textarea>
-        <label for="ContCreated"> Content:  </label>
-        <textarea name="postinput" type="text" rows="4" cols="60" id="PostContent" name="Content" placeholder="Description..."></textarea>
-        <label for="ChosenCat">Catergory:</label>
-        <input type="dropdown" id="PostCat" name="Category" placeholder="Choose Categories..">
-        <button class="button" id="addPost" type="submit">See Comments Here</button>
-    
+       <!-- 
+===========================================================================================================
+                                       POST FEED DISPLAY MODAL                                                         
+===========================================================================================================
+ -->
+
+    <div id="postList">
+      
     </div>
+
+        <!-- 
+===========================================================================================================
+                                       LOGIN MODAL                                                         
+===========================================================================================================
+ -->
 
 
     <div id="loginModal" class="modal"> 
+        <div class="modal-content animate">
+
+            <form id="loginform" class="form" action="/" >
+                <div class="imgcontainer">
+                 <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
+                </div> 
+               
+         
+                <div class="login-form-control">
+                 <h1>🅻🅾🅶🅸🅽</h1>
+         
+                 <label for="userName"><b>Userame Or Email</b></label>
+                 <input type="text" id="LUserName" placeholder="Enter Username" name="UserName" required>
+                 <i class="fa-regular fa-circle-check"></i>
+                 <i class="fa-regular fa-exclamation"></i>
+                 <small>Error Message</small>
+                 
+                 
+                 <label for="psw"><b>Password</b></label>
+                 <input type="password" id="LPassW" placeholder="Enter Password" name="psw" required>
+                 <i class="fa-regular fa-circle-check"></i>
+                 <i class="fa-regular fa-exclamation"></i>
+                 <small>Error Message</small>
+         
+                 <button class="button" id="loginBtn" type="submit">Login</button>
+         
+                 <label>
+                     <input type="checkbox" checked="checked" name="remember"> Remember Me
+                 </label>
+         
+                 <button id="cancelbtn" type="button" onclick="document.getElementById('loginModal').style.display='none'; closeBtn()" class="button">Cancel</button>
+                 
+                 <span class="psw">New User Please👇 </span>
+         
+                 <button type="button" onclick="openReg(); " class="button" href="/registration">Register</button>
+         
+                </div>
+                </form>
+
+        </div>
        
-       <form class="modal-content animate" action="/login">
-       <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
-       </div> 
-      
-
-       <div class="container" >
-        <h1>🅻🅾🅶🅸🅽</h1>
-
-        <label for="userName"><b>Userame Or Email</b></label>
-        <input type="text" id="LUserName" placeholder="Enter Username" name="UserName" required>
         
-        
-        <label for="psw"><b>Password</b></label>
-        <input type="password" id="LPassW" placeholder="Enter Password" name="psw" required>
-
-        <button class="button" id="loginBtn" type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember Me
-        </label>
-
-        <button id="cancelbtn" type="button" onclick="document.getElementById('loginModal').style.display='none'; closeBtn()" class="button">Cancel</button>
-        <span class="psw">New User Please👇 </span>
-
-        <button type="button" onclick="openReg(); " class="button" href="/registration">Register</button>
-
-       </div>
-       </form>
 
     </div>
 
+
+    <!-- 
+===========================================================================================================
+                                             REGISTER MODAL                                                    
+===========================================================================================================
+-->
+
     <div id="regModal" class="modal">     
        
-       <form class="modal-content animate" action="/register">
+        <div class="modal-content animate">
+            <form id="regform" class="form" action="register.js" method="post">
+
        <div class="imgcontainer">
         <img src="/css/img/user-group-man-woman.png" height="230px" width="290px" alt="Avatar" class="avatar">
        </div> 
        
 
-       <div class="container" id="form"> 
+       <div class="reg-form-control" id="form"> 
         <h2>🆁🅴🅶🅸🆂🆃🅴🆁</h2>
         <label for="FirstName"><b>First Name</b></label>
         <input id="FirstName" type="text" placeholder="Enter First Name" name="FirstName" required>
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
 
         <label for="LastName"><b>Last Name</b></label>
         <input id="LastName" type="text" placeholder="Enter Last Name" name="Last Name" required>
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
 
         <label for="NickName"><b>NickName</b></label>
         <input id="NickName" type="text" placeholder="This will be your userName" name="Nick Name" required  minlength="4" maxlength="10">
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
 
         <label for="Age"><b>Age</b></label>
         <input id="Age" type="number" placeholder="Enter Age" name="Age" required>
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
 
         <label  for="Gender"><b>Gender</b></label>
         <input id="Gender" type="text" placeholder="Enter Gender" name="Gender" required>
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
     
         <label for="Email"><b>Email</b></label>
         <input id="Email" type="email" onkeydown="validation()" size="30" placeholder="Enter Email Address" name="Email" required>
         <span id="text"></span>
-        <!-- <label for="userName"><b>UserName</b></label>
-        <input type="text" placeholder="Enter Username" name="UserName" required> -->
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-exclamation"></i>
+        <small>Error Message</small>
 
         <label for="psw"><b>Password</b></label>
         <input id="PassWord" type="password" placeholder="Enter Password" name="psw" required>
+        <i
+        class="far fa-eye"
+        id="togglePassword"
+        style="
+          cursor: pointer;
+          visibility: visible;
+          color: rgb(220, 2, 2);
+          top: 40px;
+          right: 40px;
+        "
+      ></i>
+      <i class="fa-regular fa-circle-check"></i>
+      <i class="fa-regular fa-exclamation"></i>
+      <small>Error Message</small>
 
         
       <span>
@@ -142,6 +252,13 @@
        </div>
     </form>
     </div>
+    </div>
+
+        <!-- 
+===========================================================================================================
+                                           NOTIFYING ERRORS ETC                                                    
+===========================================================================================================
+-->
 
 
     <!-- happy face emoji's -->
@@ -186,7 +303,16 @@
             </h4>
         </div>
 
+        <div id="logRejected" style="display:none">
+            <h4>
+                Invalid UserName or Password!
+            </h4>
+            <h4>
+               Check UserName or Password!
+            </h4><img src="/css/img/sad.gif" alt="" srcset="" height="25%" width="25%">
+        </div>
 
+<!-- 
     <div id="profileMod" class="modal">
         <form class="modal-content animate" action="/login">
         <img id="profilePic" src="/css/img/happy.gif" height="15%" width="15%">
@@ -209,23 +335,22 @@
         <div id="Email">
             <h5>Email : </h5>
         </div>
-    </div>
+    </div> -->
+    
+    
 
 </body>
 
-<!-- <button onclick="refreshPosts()">Refresh Posts</button> -->
-    <div id="postList">
-    </div>
-    <!---->
+
 
 
 <!-- this script runs login modal -->
-<script src="/js/comment.js"></script>
-<script src="/js/post.js"></script>
+<script src="/js/buttons.js"></script>
 <script src="/js/register.js"></script>
 <script src="/js/login.js"></script>
-<script src="/js/buttons.js"></script>
-<script src="/js/messenger.js"></script>
+<script src="/js/post.js"></script>
+<script src="/js/comment.js"></script>
+<!-- <script src="/js/messenger.js"></script> -->
 
 
 </html>
