comments after login showing

--- a/css/home.css
+++ b/css/home.css
@@ -173,10 +173,10 @@ h2 {
     display:none;
 }
 
-#addComment{
+/*#addComment{
     display:none;
     width: 300px;
-}
+}*/
 
 .comment{
     color:whitesmoke;
