--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,9 @@ body {
     margin: 0 0 0 var(--chat-width);
     font-family: cursive;
     font-size: 18px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-color: blue;
 }
 
 /* ------------------------------------------------------------------------- */
@@ -151,7 +153,7 @@ h6 {
    overflow: hidden;
    padding-right: 1cm;
    padding-left: 0cm;
-   /* overflow: hidden; */
+   overflow: auto;
    
 }
 
@@ -171,11 +173,13 @@ h6 {
 }
 
 #loginModal{
+  position: relative;
     height: 100%;
     width: 100%;
 }
 
 #regModal {
+  position: relative;
     height: 100%;
     width: 100%;
 }
@@ -299,54 +303,91 @@ h6 {
     background-size: 100%;
     padding-top: .75cm;
     padding-left: 1cm;
+    padding-bottom: .75cm;
     padding-right: 1cm;
     margin-left: 2cm;
     margin-right: 5cm;
     margin-bottom: 2cm;
     color:whitesmoke;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-family:cursive;
     height: 30vh;
     width: 90vh;
-    display: flex;
+    display: block;
     flex-direction: column;
     box-shadow: 2px 2px 2px 2px white;
 }
 
-.post-content{
-    text-align: justify;
-    height: 5%;
-    margin: 1% auto;
+/* .posts-content{
+  display: inline-block;
+  height: 30vh;
+  width: 90vh;
+} */
+
+.expandedPosts{
+  border-radius: 25px;
+  background-image: url('/css/img/canvas.png');
+  background-size: 100%;
+  padding-top: .75cm;
+  padding-left: 1cm;
+  padding-right: 1cm;
+  margin-left: 2cm;
+  margin-right: 5cm;
+  margin-bottom: 2cm;
+  color:whitesmoke;
+  font-size: 1.5rem;
+  font-family:cursive;
+  height: 30vh;
+  width: 90vh;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 2px 2px white;
+}
+
+.expandedPosts-content{
+  text-align: justify;
+  height: 100%;
+  width: 100%;
 }
 /* end */
 
 
 /* ------------------------------------------------------------------------- */
 /* comments */
+
+.commentLabel{
+  display:none;
+  padding-right: 0cm;
+}
+
 .comment-content{
-    height: 15px;
+  height: 30px;
+  width: 350px;
+  display:none;
 }
 
 .comment{
-    color: aqua;
-    font-size: 1.5rem;
-    font-family: cursive;
-    height: 5%;
-    width: 200px;
+  color:whitesmoke;
+  font-size: 1.5rem;
+  font-family:cursive;
+  height: 30vh;
+  width: 90vh;
 }
 
 .commentBlock{
-    height: 200px;
+    height: 400px;
     overflow: auto;
     display: none;
     z-index: 1;
     background-color:cornflowerblue;
     border-radius: 30px;
+
 }
 
 .comment-container p{
     display: inline;
-    height: 150px;
+    height: 350px;
+
 }
 
 /* end */
@@ -414,16 +455,118 @@ h6 {
 }
 
 .postBtn{
-    visibility: hidden;
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
+}
+
+.postBtn:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
+.hideCommentBtn{
+  visibility: hidden;
+
 }
 
 .commentBtn{
-    visibility: visible;
+  display: none;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 300px;
+
+
+}
+
+.CommentBtn:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
 }
 
 .HideComment{
-    visibility: hidden;
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
 }
+
+.HideComment:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
+.ShowComments{
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
+}
+
+.ShowComments:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
 
 /* end */
 
