--- a/css/home.css
+++ b/css/home.css
@@ -360,7 +360,20 @@ h6 {
   padding-right: 0cm;
 }
 
+/* label inside comment block */
+.cCommentLabel{
+  display:none;
+  padding-right: 0cm;
+}
+
 .comment-content{
+  height: 30px;
+  width: 350px;
+  display:none;
+}
+
+/* comment text input inside comment block*/
+.cComment-content{
   height: 30px;
   width: 350px;
   display:none;
@@ -400,6 +413,8 @@ h6 {
     display: flex;
     flex-direction: column;
 }
+
+
 
 /* -------------------------------------------- */
 /* Buttons */
@@ -502,8 +517,6 @@ font-weight: bolder;
   font-family:cursive;
   font-weight: bolder;
   width: 300px;
-
-
 }
 
 .CommentBtn:hover{
@@ -566,6 +579,33 @@ background-color: rgb(136, 200, 176);
 color: rgb(15, 15, 120);
 font-weight: bolder;
 }
+
+/*HTA added to the comment block */
+.cCommentBtn{
+  display: none;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 300px;
+}
+
+.cCommentBtn:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
 
 
 /* end */
