--- a/templates/home.html
+++ b/templates/home.html
@@ -28,14 +28,14 @@
 
     <nav class="nav">
         <a id="current-user"></a>
+        <a id="profile" onclick="showHideUserProfile() ;" class="nav__link">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>
         <a id ="homePage" href = "/" onclick="e.preventDefault();" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
         <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝕖𝕘𝕚𝕤𝕥𝕖𝕣</a>
         <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕠𝕘𝕀𝕟</a>
         <a id ="post" onclick="refreshPosts() ;" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
         <!--HTA moved Logout() to buttons as it was not being called from here <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>-->   
-        <a id="logout" href="/" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>   <a 
-        id="profile" class="nav__link" style="display:none">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>    
-
+        <a id="logout" href="/" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>       
+        <div id="userProfile"> 
     </nav>
 
        <!-- 
